--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
 PORT=5000
-# BACKEND_URL=https://dev.gateway.bitbybit.studio
-BACKEND_URL=http://localhost:8004
-SOCKET_URL=http://localhost:8004
-# SOCKET_URL=https://api.dev.bitbybit.studio
-# BACKEND_URL=https://api-bitlogin-v2-dev-5uq4y.ondigitalocean.app
+BACKEND_URL=https://dev.gateway.bitbybit.studio
 WHATSAPP_NUMBER=15063083852
