--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
-BACKEND_URL=https://dev.gateway.bitbybit.studio
-WHATSAPP_NUMBER=15063083852
+# BACKEND_URL=https://dev.gateway.bitbybit.studio
+BACKEND_URL=http://localhost:8080
+WHATSAPP_NUMBER=12516996639
