--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
 # BACKEND_URL=https://dev.gateway.bitbybit.studio
-BACKEND_URL=http://localhost:8080
-WHATSAPP_NUMBER=12516996639
+# BACKEND_URL=http://localhost:8080
+WHATSAPP_NUMBER=14159108433
+BACKEND_URL=https://staging.api.bitbybit.studio
