--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
+# LOCAL
+# PORT=5000
+# INTEGRATION_URL=https://staging.api.bitbybit.studio/integrations/api
+# BITLOGIN_URL=http://localhost:8001/bitlogin/api
+# BASE_URL=http://localhost:8001
+# WHATSAPP_NUMBER=15063083852
+
+# LIVE
 PORT=5000
-# BACKEND_URL=https://dev.gateway.bitbybit.studio
-# BACKEND_URL=http://localhost:8080
-WHATSAPP_NUMBER=14159108433
-BACKEND_URL=https://staging.api.bitbybit.studio
+INTEGRATION_URL=https://staging.api.bitbybit.studio/integrations/api
+BITLOGIN_URL=https://staging.bitbybit.studio/bitlogin/api
+BASE_URL=https://staging.bitbybit.studio
+WHATSAPP_NUMBER=15063083852
